@@ -34,6 +34,7 @@ ___
 * cube/cubeModel parameter requestChain added to allow custom request builders
 * sticky table (rows/cols) functionality added (either via htmlBuilder parameters or cube layout cube:Freeze element)
 * messages editor and viewer added
+* input widget supports type time and steps attribute
 * cube inline chart functionality added (render measures as a chart per row), use cube:Chart to configure and additionally load bcduiCubeInlineChart
 
 .Security
